--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.4",
+    "@neondatabase/serverless": "^0.9.5",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/input": "^2.2.5",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
+    "drizzle-orm": "^0.33.0",
     "framer-motion": "^11.5.6",
     "next": "14.2.13",
     "react": "^18",
