--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.4",
+    "@google/generative-ai": "^0.20.0",
     "@neondatabase/serverless": "^0.9.5",
     "@nextui-org/button": "^2.0.38",
     "@nextui-org/input": "^2.2.5",
@@ -27,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.24.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
