--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-pageflip": "^2.0.3",
     "react-toastify": "^10.0.5",
     "replicate": "^0.34.1",
